tests/compile-fail/one_named_lock_multiple_instances.stderr
error[E0499]: cannot borrow `unlocked_token` as mutable more than once at a time
  --> tests/compile-fail/one_named_lock_multiple_instances.rs:25:40
   |
24 |             let (a1, _) = lock_a1.lock(&mut unlocked_token);
   |                                        ------------------- first mutable borrow occurs here
25 |             let (a2, _) = lock_a2.lock(&mut unlocked_token);
   |                                        ^^^^^^^^^^^^^^^^^^^ second mutable borrow occurs here
26 |             println!("{}, {}", a1, a2);
   |                                -- first borrow later used here

error[E0499]: cannot borrow `unlocked_token` as mutable more than once at a time
  --> tests/compile-fail/one_named_lock_multiple_instances.rs:30:32
   |
29 |     let (a2, _) = lock_a2.lock(&mut unlocked_token);
   |                                ------------------- first mutable borrow occurs here
30 |     let (a1, _) = lock_a1.lock(&mut unlocked_token);
   |                                ^^^^^^^^^^^^^^^^^^^ second mutable borrow occurs here
31 |     handle.join();
32 |     println!("{}, {}", a2, a1);
   |                        -- first borrow later used here
